@@ -1,5 +1,5 @@
 /*
- * Copyright © 2020-2021 Inria.  All rights reserved.
+ * Copyright © 2020-2022 Inria.  All rights reserved.
  * See COPYING in top-level directory.
  */
 
@@ -69,5 +69,49 @@ typedef struct {
 } zes_mem_state_t;
 
 extern ze_result_t zesMemoryGetState(zes_mem_handle_t, zes_mem_state_t*);
+
+typedef void * zes_fabric_port_handle_t;
+
+extern ze_result_t zesDeviceEnumFabricPorts(zes_device_handle_t, uint32_t*, zes_fabric_port_handle_t*);
+
+typedef struct _zes_fabric_port_id_t {
+  uint32_t fabricId;
+  uint32_t attachId;
+  uint8_t portNumber;
+} zes_fabric_port_id_t;
+
+typedef struct _zes_fabric_port_speed_t {
+  int64_t bitRate;
+  int32_t width;
+} zes_fabric_port_speed_t;
+
+#define ZES_MAX_FABRIC_PORT_MODEL_SIZE 256
+typedef struct _zes_fabric_port_properties_t {
+  char model[ZES_MAX_FABRIC_PORT_MODEL_SIZE];
+  int onSubdevice;
+  uint32_t subdeviceId;
+  zes_fabric_port_id_t portId;
+  zes_fabric_port_speed_t maxRxSpeed;
+  zes_fabric_port_speed_t maxTxSpeed;
+} zes_fabric_port_properties_t;
+
+extern ze_result_t zesFabricPortGetProperties(zes_fabric_port_handle_t, zes_fabric_port_properties_t *);
+
+typedef enum _zes_fabric_port_status_t {
+    ZES_FABRIC_PORT_STATUS_UNKNOWN = 0,
+    ZES_FABRIC_PORT_STATUS_HEALTHY = 1,
+    ZES_FABRIC_PORT_STATUS_DEGRADED = 2,
+    ZES_FABRIC_PORT_STATUS_FAILED = 3,
+    ZES_FABRIC_PORT_STATUS_DISABLED = 4
+} zes_fabric_port_status_t;
+
+typedef struct _zes_fabric_port_state_t {
+  zes_fabric_port_status_t status;
+  zes_fabric_port_id_t remotePortId;
+  zes_fabric_port_speed_t rxSpeed;
+  zes_fabric_port_speed_t txSpeed;
+} zes_fabric_port_state_t;
+
+ze_result_t zesFabricPortGetState(zes_fabric_port_handle_t, zes_fabric_port_state_t *);
 
 #endif /* HWLOC_PORT_L0_ZET_API_H */
