@@ -19,6 +19,9 @@ bug fixes (and other actions) for each version of hwloc since version
 
 Version 2.9.0
 -------------
+* Backends
+  + The LevelZero backend now reports the "XeLinkBandwidth" distance
+    matrix between L0 devices (and subdevices) when available.
 * Tools
   + lstopo now switches to console mode when its output is redirected.
     Graphical window mode may be forced back with --of window.
